Ajout de la propriete eureka

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,4 +1,4 @@
-server.port 9001
+server.port : 9001
 
 #Configurations H2
 spring.jpa.show-sql=true
@@ -15,4 +15,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.sql-script-encoding=UTF-8
 
 #Nos configurations
-mes-configs.limiteDeProduits= 4
+mes-configs.limiteDeProduits= 5
+
+#Eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
